--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:    
       - name: Deploy to ec2
-        uses: vishwesh/action@v1
+        uses: actions/checkout@v1
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
